--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Dr. Li Lu(卢立)'s Homepage"
 title_separator          : "-"
 name                     : &name "Li Lu"
 description              : &description "Research Professor @ Zhejiang University"
-url                      : https://lynnlilu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://tianyebaba.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "lynnlilu.github.io"
+repository               : "tianyebaba.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : #"lynnlilu"
+  github           : #"tianyebaba"
   google_plus      :
   keybase          :
   instagram        :
