--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Dr. Li Lu(卢立)'s Homepage"
+title                    : "Ye Tian(田野)'s Homepage"
 title_separator          : "-"
 name                     : &name "Li Lu"
 description              : &description "Research Professor @ Zhejiang University"
