--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Ye Tian(田野)'s Homepage"
 title_separator          : "-"
-name                     : &name "Li Lu"
+name                     : &name "Ye Tian"
 description              : &description "Research Professor @ Zhejiang University"
 url                      : https://tianyebaba.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -113,7 +113,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  publons          : "https://publons.com/researcher/3101490/li-lu/"
+  publons          : #"https://publons.com/researcher/3101490/li-lu/"
 
 
 # Reading Files
